hard-gists/574fc95caee4c22f21ed/run.log
=== Docker Run Log for 574fc95caee4c22f21ed ===
Started at: Mi 29. Okt 15:56:26 CET 2025

[2025-10-29 15:56:26] START: Running container for 574fc95caee4c22f21ed
[2025-10-29 15:56:27] SUCCESS: Container 4d775d60e118a10dd4b84e3005c96622ab0f73a9a72badff9efddd80a8b19b1e started for 574fc95caee4c22f21ed
=== Container logs for 574fc95caee4c22f21ed ===
  File "/snippet.py", line 62
    print author  # <Author:Carol>
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 574fc95caee4c22f21ed ===
[2025-10-29 15:56:29] INFO: Container 4d775d60e118a10dd4b84e3005c96622ab0f73a9a72badff9efddd80a8b19b1e has stopped
